<resources>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_quality_entry_cif">CIF</string>
    <string name="pref_video_quality_entry_qvga">QVGA</string>
    <string name="pref_video_quality_entry_qcif">QCIF</string>
    <string name="pref_camera_powermode_title">Power Mode</string>
    <string name="pref_camera_powermode_entry_lp">Low_Power</string>
    <string name="pref_camera_powermode_entry_np">Normal_Power</string>
    <string name="pref_camera_powermode_value_lp">Low_Power</string>
    <string name="pref_camera_powermode_value_np">Normal_Power</string>
    <string name="pref_camera_powermode_default">Normal_Power</string>
    <string name="pref_camera_autoexposure_default">center-weighted</string>
    <string name="pref_camera_autoexposure_title">Select Auto Exposure Mode</string>
    <string name="pref_camera_autoexposure_entry_frameaverage">Frame Average</string>
    <string name="pref_camera_autoexposure_entry_centerweighted">Center Weighted</string>
    <string name="pref_camera_autoexposure_entry_spotmetering">Spot Metering</string>
    <string name="pref_camera_autoexposure_value_frameaverage">frame-average</string>
    <string name="pref_camera_autoexposure_value_centerweighted">center-weighted</string>
    <string name="pref_camera_autoexposure_value_spotmetering">spot-metering</string>
    <string name="pref_camera_videoencoder_title">Video Encoder</string>
    <string name="pref_camera_videoencoder_entry_0">MPEG4</string>
    <string name="pref_camera_videoencoder_entry_1">H263</string>
    <string name="pref_camera_videoencoder_entry_2">H264</string>
    <string name="pref_camera_videoencoder_default">h264</string>
    <string name="pref_camera_videoencoder_dialogtitle">Video Encoder</string>
    <string name="pref_camera_audioencoder_default">aac</string>
    <string name="pref_camera_audioencoder_title">Audio Encoder</string>
    <string name="pref_camera_audioencoder_entry_0">AMRNB</string>
    <string name="pref_camera_audioencoder_entry_1">AAC</string>
    <string name="pref_camera_video_duration_default">10</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
    <string name="pref_camera_video_duration_entry_mms">30 seconds(MMS)</string>
    <string name="pref_camera_video_duration_entry_10">10 minutes</string>
    <string name="pref_camera_video_duration_entry_30">30 minutes</string>
    <string name="pref_camera_skinToneEnhancement_default">disable</string>
    <string name="pref_camera_skinToneEnhancement_title">Skin Tone Enhancement</string>
    <string name="pref_camera_skinToneEnhancement_entry_enable">Enable</string>
    <string name="pref_camera_skinToneEnhancement_entry_disable">Disable</string>
    <string name="pref_camera_skinToneEnhancement_value_enable">enable</string>
    <string name="pref_camera_skinToneEnhancement_value_disable">disable</string>
    <string name="pref_camera_zsl_title">ZSL</string>
    <string name="pref_camera_zsl_default">off</string>
    <string name="pref_camera_selectablezoneaf_default">auto</string>
    <string name="pref_camera_selectablezoneaf_title">Selectable Zone Auto Focus</string>
    <string name="pref_camera_selectablezoneaf_entry_auto">Auto</string>
    <string name="pref_camera_selectablezoneaf_entry_spotmetering">Spot Metering</string>
    <string name="pref_camera_selectablezoneaf_entry_centerweighted">Center Weighted</string>
    <string name="pref_camera_selectablezoneaf_entry_frameaverage">Frame Average</string>
    <string name="pref_camera_selectablezoneaf_value_auto">auto</string>
    <string name="pref_camera_selectablezoneaf_value_spotmetering">spot-metering</string>
    <string name="pref_camera_selectablezoneaf_value_centerweighted">center-weighted</string>
    <string name="pref_camera_selectablezoneaf_value_frameaverage">frame-average</string>
    <string name="pref_camera_zsl_entry_off">Off</string>
    <string name="pref_camera_zsl_entry_on">On</string>
    <string name="pref_camera_zsl_value_off">off</string>
    <string name="pref_camera_zsl_value_on">on</string>
    <string name="pref_camera_video_hdr_entry_off">Off</string>
    <string name="pref_camera_video_hdr_entry_on">On</string>
    <string name="pref_camera_video_hdr_value_off">off</string>
    <string name="pref_camera_video_hdr_value_on">on</string>
    <string name="pref_camera_video_hdr_title">Video HDR</string>
    <string name="pref_camera_video_hdr_default">off</string>
    <string name="pref_camera_facedetection_default">off</string>
    <string name="pref_camera_facedetection_title">Face Detection</string>
    <string name="pref_camera_facedetection_entry_off">Off</string>
    <string name="pref_camera_facedetection_entry_on">On</string>
    <string name="pref_camera_redeyereduction_default">disable</string>
    <string name="pref_camera_redeyereduction_title">Redeye Reduction</string>
    <string name="pref_camera_redeyereduction_entry_enable">Enable</string>
    <string name="pref_camera_redeyereduction_entry_disable">Disable</string>
    <string name="pref_camera_mce_default">enable</string>
    <string name="error_app_unsupported_hfr">Only VGA and WVGA are supported when HFR is ON</string>
    <string name="error_app_unsupported_hfr_720p">720P can only support up to 90FPS</string>
    <string name="error_app_unsupported_hfr_1080p">1080P can not support HFR</string>
    <string name="error_app_unsupported_hfr_front">Front camera can not support HFR</string>
    <string name="error_app_unsupported_hfr_movie_solid">movie solid can not support HFR</string>
    <string name="error_app_unsupported_hfr_codec">Only H264 video encoding is supported when HFR is ON</string>
    <string name="error_app_unsupported">Unsupported video resolution for this encoder type</string>
    <string name="error_app_unsupported_raw_wavelet">wavelet denoise will not take effect when taking raw pictures</string>
    <string name="pref_camera_ae_bracket_hdr_title">HDR and PhotoSolid</string>
    <string name="pref_camera_ae_bracket_hdr_entry_off">Off</string>
    <string name="pref_camera_ae_bracket_hdr_entry_hdr">HDR</string>
    <string name="pref_camera_ae_bracket_hdr_entry_ae_bracket">PhotoSolid</string>
    <string name="pref_camera_ae_bracket_hdr_value_off">Off</string>
    <string name="pref_camera_ae_bracket_hdr_value_hdr">HDR</string>
    <string name="pref_camera_ae_bracket_hdr_value_ae_bracket">AE-Bracket</string>
    <string name="pref_camera_ae_bracket_hdr_default">Off</string>
    <string name="err_app_unsupport_ae_bracket_code">no ae bracket support by Apps now</string>
    <string name="snapshot_lower_than_video">Video snapshot size lower than video size. Capping to Video size. Please select a resolution higher or equal to the current video size.</string>
    <string name="snapshotsize_low_powermode">We do not support picture resolution in Low Power Mode. Video size snapshot will be taken. Please select High power mode for picture size.</string>
    <string name="snapshot_qcif_and_d1">Only Video size snapshot supported for this resolution.</string>
    <string name="pref_camera_hfr_default">off</string>
    <string name="pref_camera_hfr_title">Video High FrameRate</string>
    <string name="pref_camera_hfr_entry_off">Off</string>
    <string name="pref_camera_hfr_entry_2x">60</string>
    <string name="pref_camera_hfr_entry_3x">90</string>
    <string name="pref_camera_hfr_entry_4x">120</string>
    <string name="pref_camera_hfr_value_off">off</string>
    <string name="pref_camera_hfr_value_2x">60</string>
    <string name="pref_camera_hfr_value_3x">90</string>
    <string name="pref_camera_hfr_value_4x">120</string>
    <string name="pref_camera_movie_solid_default">off</string>
    <string name="pref_camera_movie_solid_title">Movie Solid</string>
    <string name="pref_camera_movie_solid_entry_off">Off</string>
    <string name="pref_camera_movie_solid_entry_on">On</string>
    <string name="pref_camera_movie_solid_value_off">off</string>
    <string name="pref_camera_movie_solid_value_on">on</string>
    <string name="pref_camera_denoise_title">Wavelet Denoise Mode</string>
    <string name="pref_camera_denoise_default">denoise-on</string>
    <string name="pref_camera_denoise_entry_off">Off</string>
    <string name="pref_camera_denoise_entry_on">On</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">Select ISO</string>
    <string name="pref_camera_iso_entry_auto">Auto</string>
    <string name="pref_camera_iso_entry_isodeblur">ISO Auto(HJR)</string>
    <string name="pref_camera_iso_entry_iso100">ISO100</string>
    <string name="pref_camera_iso_entry_iso200">ISO200</string>
    <string name="pref_camera_iso_entry_iso400">ISO400</string>
    <string name="pref_camera_iso_entry_iso800">ISO800</string>
    <string name="pref_camera_iso_entry_iso1600">ISO1600</string>
    <string name="pref_camera_iso_entry_iso3200">ISO3200</string>
    <string name="pref_camera_iso_value_auto">auto</string>
    <string name="pref_camera_iso_value_isodeblur">ISO_HJR</string>
    <string name="pref_camera_iso_value_iso100">ISO100</string>
    <string name="pref_camera_iso_value_iso200">ISO200</string>
    <string name="pref_camera_antibanding_title">Anti Banding</string>
    <string name="pref_camera_antibanding_default">50hz</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_touchafaec_default">touch-on</string>
    <string name="pref_camera_touchafaec_title">Touch AF/AEC</string>
    <string name="pref_camera_touchaec_default">touch-on</string>
    <string name="pref_camera_touchaec_title">Touch AEC</string>
    <string name="pref_camera_sharpness_default">2</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_contrast_default">5</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_default">5</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_jpegquality_default">superfine</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_picture_format_title">Select Picture Format</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_histogram_default">disable</string>
    <string name="pref_camera_histogram_title">Histogram</string>
    <string name="pref_camera_scenedetect_default">off</string>
    <string name="pref_camera_scenedetect_title">Auto Scene Detection</string>
    <string name="pref_camera_videosnapsize_default">1920x1088</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
</resources>