<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_flashmode_icons" camera:largeIcons="@array/camera_flashmode_largeicons" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:singleIcon="@drawable/ic_exposure_holo_light" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:singleIcon="@drawable/ic_scn_holo_light" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" camera:largeIcons="@array/whitebalance_largeicons" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/camera_recordlocation_icons" camera:largeIcons="@array/camera_recordlocation_largeicons" />
    <ListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
    <ListPreference camera:title="@string/pref_camera_focusmode_title" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:icons="@array/camera_id_icons" camera:largeIcons="@array/camera_id_largeicons" />
    <ListPreference camera:title="@string/pref_camera_scenedetect_title" camera:key="pref_camera_scenedetect_key" camera:defaultValue="@string/pref_camera_scenedetect_default" camera:entryValues="@array/pref_camera_scenedetect_entryvalues" camera:entries="@array/pref_camera_scenedetect_entries" />
    <ListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" />
    <ListPreference camera:title="@string/pref_camera_jpegquality_title" camera:key="pref_camera_jpegquality_key" camera:defaultValue="@string/pref_camera_jpegquality_default" camera:entryValues="@array/pref_camera_jpegquality_entryvalues" camera:entries="@array/pref_camera_jpegquality_entries" />
    <ListPreference camera:title="@string/pref_camera_touchafaec_title" camera:key="pref_camera_touchafaec_key" camera:defaultValue="@string/pref_camera_touchafaec_default" camera:entryValues="@array/pref_camera_touchafaec_entryvalues" camera:entries="@array/pref_camera_touchafaec_entries" />
    <ListPreference camera:title="@string/pref_camera_touchaec_title" camera:key="pref_camera_touchaec_key" camera:defaultValue="@string/pref_camera_touchaec_default" camera:entryValues="@array/pref_camera_touchaec_entryvalues" camera:entries="@array/pref_camera_touchaec_entries" />
    <ListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" />
    <ListPreference camera:title="@string/pref_camera_histogram_title" camera:key="pref_camera_histogram_key" camera:defaultValue="@string/pref_camera_histogram_default" camera:entryValues="@array/pref_camera_histogram_entryvalues" camera:entries="@array/pref_camera_histogram_entries" />
    <ListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" />
    <ListPreference camera:title="@string/pref_camera_picture_format_title" camera:key="pref_camera_pictureformat_key" camera:defaultValue="@string/pref_camera_picture_format_default" camera:entryValues="@array/pref_camera_picture_format_entryvalues" camera:entries="@array/pref_camera_picture_format_entries" />
    <ListPreference camera:title="@string/pref_camera_sharpness_title" camera:key="pref_camera_sharpness_key" camera:defaultValue="@string/pref_camera_sharpness_default" camera:entryValues="@array/pref_camera_multilevel_sharpness_entryvalues" camera:entries="@array/pref_camera_sharpness_entries" />
    <ListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_contrast_entries" />
    <ListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_saturation_entries" />
    <ListPreference camera:title="@string/pref_camera_denoise_title" camera:key="pref_camera_denoise_key" camera:defaultValue="@string/pref_camera_denoise_default" camera:entryValues="@array/pref_camera_denoise_entryvalues" camera:entries="@array/pref_camera_denoise_entries" />
    <ListPreference camera:title="@string/pref_camera_autoexposure_title" camera:key="pref_camera_autoexposure_key" camera:defaultValue="@string/pref_camera_autoexposure_default" camera:entryValues="@array/pref_camera_autoexposure_entryvalues" camera:entries="@array/pref_camera_autoexposure_entries" />
    <ListPreference camera:title="@string/pref_camera_skinToneEnhancement_title" camera:key="pref_camera_skinToneEnhancement_key" camera:defaultValue="@string/pref_camera_skinToneEnhancement_default" camera:entryValues="@array/pref_camera_skinToneEnhancement_entryvalues" camera:entries="@array/pref_camera_skinToneEnhancement_entries" />
    <ListPreference camera:title="@string/pref_camera_facedetection_title" camera:key="pref_camera_facedetection_key" camera:defaultValue="@string/pref_camera_facedetection_default" camera:entryValues="@array/pref_camera_facedetection_entryvalues" camera:entries="@array/pref_camera_facedetection_entries" />
    <ListPreference camera:title="@string/pref_camera_redeyereduction_title" camera:key="pref_camera_redeyereduction_key" camera:defaultValue="@string/pref_camera_redeyereduction_default" camera:entryValues="@array/pref_camera_redeyereduction_entryvalues" camera:entries="@array/pref_camera_redeyereduction_entries" />
    <ListPreference camera:title="@string/pref_camera_selectablezoneaf_title" camera:key="pref_camera_selectablezoneaf_key" camera:defaultValue="@string/pref_camera_selectablezoneaf_default" camera:entryValues="@array/pref_camera_selectablezoneaf_entryvalues" camera:entries="@array/pref_camera_selectablezoneaf_entries" />
    <ListPreference camera:title="@string/pref_camera_zsl_title" camera:key="pref_camera_zsl_key" camera:defaultValue="@string/pref_camera_zsl_default" camera:entryValues="@array/pref_camera_zsl_entryvalues" camera:entries="@array/pref_camera_zsl_entries" />
    <ListPreference camera:title="@string/pref_camera_ae_bracket_hdr_title" camera:key="pref_camera_ae_bracket_hdr_key" camera:defaultValue="@string/pref_camera_ae_bracket_hdr_default" camera:entryValues="@array/pref_camera_hdr_entryvalues" camera:entries="@array/pref_camera_hdr_entries" />
    <ListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_videosnapsize_key" camera:defaultValue="@string/pref_camera_videosnapsize_default" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
</PreferenceGroup>